@@ -22,14 +22,11 @@
 #ifndef _DB_DISK_H_INCLUDED
 #define _DB_DISK_H_INCLUDED
 
-#include "config.h"
 #include <stdbool.h>
 #include "db_config.h"
 
 void db_scan_disk(bool);
 
-#ifdef WITH_PTHREAD
 int db_disk_start_threads();
 int db_disk_finish_threads();
-#endif
 #endif
